Add sidebar and set necessary styles

--- a/src/pages/people.astro
+++ b/src/pages/people.astro
@@ -8,11 +8,11 @@ import Sidebar from '../components/Sidebar';
 <Layout title="Welcome to Astro.">
 	<main>
 		<div class="grid grid-cols-5">
-			<Sidebar currentPath="home" />
+			<Sidebar currentPath="people" />
 			<div class="col-span-4">
 				<Container>
 					<div class="py-12">
-						Index
+						<PeopleTable />
 					</div>
 				</Container>
 			</div>
